Add the second section of questions

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;600;700&display=swap');
+
 body {
   margin: 0;
+  display: flex;
+  justify-content: center;
+  background-color: #F5F5F5;
+  font-family: 'IBM Plex Mono', monospace;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -13,3 +19,26 @@ h1, h2, h3, h4, h5, h6 {
   padding-inline-end:0;
 }
 
+.content {
+  width: 900px;
+}
+
+.containerTratamientPlan {
+  display: grid;
+  grid-template: 'title '
+  'form'
+  'table';
+  gap: 10px;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
